# ymir

./: Cargo.toml  LICENSE  README.md  resources.md
benches/: ymir_bench.rs
src/: main.rs  particle.rs  simulation.rs  terrain.rs
src/sim/: lib.rs  particle.rs  simulation.rs  terrain.rs
